# services/shopping_cart/swagger_server/models/__init__.py
@@ -3,5 +3,5 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.article import Article
+from swagger_server.models.item import Item
 from swagger_server.models.cart import Cart
