# services/shopping_cart/swagger_server/models/item.py
@@ -9,7 +9,7 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class Article(Model):
+class Item(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
@@ -37,13 +37,13 @@ class Article(Model):
         self._article_id = article_id
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Article':
+    def from_dict(cls, dikt) -> 'Item':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
         :return: The Article of this Article.  # noqa: E501
-        :rtype: Article
+        :rtype: Item
         """
         return util.deserialize_model(dikt, cls)
 
