# services/shopping_cart/swagger_server/repository/repository.py
@@ -7,7 +7,7 @@ from sqlalchemy.sql import exists
 from sqlalchemy.orm import sessionmaker, lazyload
 from sqlalchemy_utils import database_exists, create_database
 
-from swagger_server.models import article as domain
+from swagger_server.models import item as domain
 from swagger_server.repository import entities
 from swagger_server.exceptions.exceptions import *
 
@@ -27,16 +27,10 @@ engine = sqlalchemy.create_engine(db_string)
 if not database_exists(engine.url):
     create_database(engine.url)
 
-# entities.Base.metadata.drop_all(engine)
-# entities.Base.metadata.create_all(engine)
+entities.Base.metadata.drop_all(engine)
+entities.Base.metadata.create_all(engine)
 
 Session = sessionmaker(bind=engine)
-
-
-# @contextlib.contextmanager
-# def get_session():
-#     with contextlib.closing(Session()) as session:
-#         yield session
 
 
 class Repository:
@@ -79,13 +73,13 @@ class Repository:
             .delete()
         self.session.commit()
 
-    def get_items(self, user_id: int) -> List[domain.Article]:
+    def get_items(self, user_id: int) -> List[domain.Item]:
         cart = self.get_cart(user_id)
         if cart is None:
             raise NotFoundException()
         return [a.to_domain() for a in cart.items]
 
-    def add_item(self, cart_id: int, article: domain.Article):
+    def add_item(self, cart_id: int, article: domain.Item):
         article_entity = self.get_article(cart_id, article.article_id)
         if article_entity is not None:
             article_entity.quantity += article.quantity
@@ -109,7 +103,7 @@ class Repository:
             .delete()
         self.session.commit()
 
-    def checkout_cart(self, cart_id: int) -> List[domain.Article]:
+    def checkout_cart(self, cart_id: int) -> List[domain.Item]:
         articles = self.get_items(cart_id)
         self.session.query(entities.Item) \
             .filter(entities.Item.cart_id == cart_id) \
