# services/shopping_cart/swagger_server/swagger/swagger.yaml
@@ -6,6 +6,8 @@ info:
 paths:
   /cart/{userId}:
     get:
+      tags:
+        - "cart"
       operationId: "get_cart_by_user_id"
       produces:
       - "application/json"
@@ -24,8 +26,10 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Cart not found"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
+      x-swagger-router-controller: "swagger_server.controllers.cart_controller"
     post:
+      tags:
+        - "cart"
       operationId: "create_cart_for_user"
       produces:
       - "application/json"
@@ -42,8 +46,10 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Cart not found"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
+      x-swagger-router-controller: "swagger_server.controllers.cart_controller"
     delete:
+      tags:
+        - "cart"
       operationId: "empty_cart"
       produces:
       - "application/json"
@@ -58,9 +64,11 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Pet not found"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
+      x-swagger-router-controller: "swagger_server.controllers.cart_controller"
   /cart/{userId}/checkout:
     post:
+      tags:
+        - "cart"
       operationId: "checkout_cart"
       parameters:
       - name: "userId"
@@ -75,9 +83,11 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "User not found"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
+      x-swagger-router-controller: "swagger_server.controllers.cart_controller"
   /cart/{userId}/article:
     post:
+      tags:
+        - "cart"
       operationId: "add_article_to_cart"
       parameters:
       - name: "userId"
@@ -89,7 +99,7 @@ paths:
         name: "article"
         required: true
         schema:
-          $ref: "#/definitions/Article"
+          $ref: "#/definitions/Item"
       responses:
         200:
           description: "successful operation"
@@ -97,9 +107,11 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "User not found"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
+      x-swagger-router-controller: "swagger_server.controllers.cart_controller"
   /cart/{userId}/article/{articleId}:
     delete:
+      tags:
+        - "cart"
       operationId: "remove_article_from_cart"
       parameters:
       - name: "userId"
@@ -118,7 +130,7 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "User not found"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
+      x-swagger-router-controller: "swagger_server.controllers.cart_controller"
 definitions:
   Cart:
     type: "object"
@@ -126,7 +138,7 @@ definitions:
       articles:
         type: "array"
         items:
-          $ref: "#/definitions/Article"
+          $ref: "#/definitions/Item"
       abandoned:
         type: "boolean"
       complete:
@@ -140,7 +152,7 @@ definitions:
         articleId: 6
       - quantity: 0
         articleId: 6
-  Article:
+  Item:
     type: "object"
     properties:
       quantity:
